# zotero-cli-cc

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  pyproject.toml
docs/: agent-interface.md
docs/en/getting-started/: setup.md
docs/en/guide/: workspace.md
docs/zh/getting-started/: setup.md
docs/zh/guide/: workspace.md
extension/zot-cli-bridge/: README.md  bootstrap.js  manifest.json
skill/zotero-cli-cc/: SKILL.md
skill/zotero-cli-cc/references/: commands.md  windows-encoding.md  workflows.md  workspaces.md
src/zotero_cli_cc/: cli.py  config.py  formatter.py  mcp_server.py
src/zotero_cli_cc/commands/: _helpers.py  add.py  ask.py  attach.py  attachment.py  cite.py  collection.py  delete.py  duplicates.py  enrich.py  export.py  list_cmd.py  note.py  open_cmd.py  orphans.py  pdf.py  read.py  recent.py  relate.py  rename.py  schema.py  search.py  stats.py  summarize.py  summarize_all.py  tag.py  trash.py  update.py  update_status.py  workspace.py
src/zotero_cli_cc/core/: embedding_router.py  enrich.py  local_bridge.py  pdf_extractor.py  rag.py  rag_index.py  reader.py  rename.py  writer.py
tests/: test_add_pdf.py  test_agent_p1.py  test_ask.py  test_attach.py  test_cli_attachment.py  test_cli_note.py  test_cli_p1.py  test_completions.py  test_enrich.py  test_extractor_grobid.py  test_extractor_pdfplumber.py  test_mcp_server.py  test_new_features.py  test_orphans.py  test_pdf_extractor.py  test_rag.py  test_reader.py  test_rename.py  test_summarize_all.py  test_tier1_annotations.py  test_tier1_update.py
