[project]
name = "zotero-cli-cc"
version = "0.7.0"
description = "Zotero CLI for Claude Code — SQLite reads + Web API writes"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "pyzotero>=1.5",
    "pypdfium2>=4.30",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "markdownify>=1.2.2",
    "openai>=2.33.0",
    "requests>=2.31",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
# PyMuPDF is AGPL/Artifex-licensed, so it is opt-in. Installing this extra
# enables the 'pymupdf' extractor (PDF annotation/highlight extraction and
# higher-quality markdown). The default 'pdfium' extractor needs none of this.
pymupdf = ["pymupdf>=1.24"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
    "mkdocs-click>=0.8",
]

[project.scripts]
zot = "zotero_cli_cc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_cli_cc"]

# Bundle the Zotero bridge plugin so `zot bridge install` can find it after a
# pip install (the source lives at repo-root extension/, outside the package).
[tool.hatch.build.targets.wheel.force-include]
"extension/zot-cli-bridge/manifest.json" = "zotero_cli_cc/bridge_assets/manifest.json"
"extension/zot-cli-bridge/bootstrap.js" = "zotero_cli_cc/bridge_assets/bootstrap.js"
"extension/zot-cli-bridge/icon.png" = "zotero_cli_cc/bridge_assets/icon.png"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pymupdf>=1.24",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["zotero_cli_cc"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
